# pydantic-ai-walkthrough

./: .gitignore  01_pure_python_walkthrough.ipynb  02_pydantic_ai_walkthrough.ipynb  03_langchain_walkthrough.ipynb  README.md  main.py  mcp_server.py  pyproject.toml  tool_functions.py
